# Arrayer

pkg/: pyproject.toml
pkg/src/arrayer/: __init__.py  exception.py  matrix.py  pca.py  pcloud.py  tensor.py  typing.py
pkg/src/arrayer/mesh/: __init__.py  spherical.py  util.py
test/: pyproject.toml
test/data/: matrix.yaml
test/src/arrayer_testsuite/: __main__.py  matrix__test.py  pca__test.py  tensor__test.py
test/src/arrayer_testsuite/data/: matrix.yaml  pca.yaml  tensor.yaml
test/src/arrayer_testsuite/data/config/: coverage.toml  pytest.toml
