
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.6"
name = "Arrayer-TestSuite"
requires-python = ">=3.10"
dependencies = [
    "pytest ==8.3.5",
    "pytest-cov ==6.0.0",
    "pytest-html ==4.1.1",
    "coverage ==7.6.12",
    "pkgdata",
]

[project.scripts]
test-arrayer = "arrayer_testsuite.__main__:main"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["test"]
python_files = ["*_test.py"]
python_functions = ["test_*", "tests_*", "*_test", "*_tests"]
